--- a/app/ui_style.qss
+++ b/app/ui_style.qss
@@ -44,6 +44,7 @@ QMainWindow, QWidget { background: #0f172a; }
 
 QLineEdit:focus, QComboBox:focus, QTextEdit:focus {
   border: 1px solid #7cc4ff;
+  box-shadow: 0 0 0 2px rgba(124,196,255,0.30);
 }
 
 /* Cards */
@@ -151,4 +152,5 @@ QGroupBox#nbCard::title {
   color: #eaf2ff;
 }
 #nbPlayBtn:hover { background: rgba(124,196,255,0.28); }
+
 
